k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-v3
  namespace: personal-website

spec:
  replicas: 4

  selector:
    matchLabels:
      app: personal-website

  template:
    metadata:
      labels:
        app: personal-website

    spec:
      containers:
      - name: personal-website
        image: brigghinwebsiteacr.azurecr.io/personal-website:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80
