k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
  namespace: personal-website

spec:
  type: LoadBalancer

  selector:
    app: personal-website

  ports:
  - port: 80
    targetPort: 80
